--- a/Css/Experiencias.css
+++ b/Css/Experiencias.css
@@ -68,5 +68,35 @@ main{
   #seven {grid-area: seven; margin: auto;}
   #eight {grid-area: eight; margin: auto;}
   
+  @media (max-width: 1000px) {
+    
+    .lletra{
+      font-size: 16px;
+    }
+
+    main{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-top: 30px;
+      margin-left: 30px;
+      margin-right: 30px;
+    
+    }
+
+    #title {grid-area: title; margin-bottom: 15px; margin-top: 20px;}
   
+    .grid-layout{
+      grid-template-areas:
+      'title'
+      'one'
+      'five'
+      'two'
+      'six'
+      'three'
+      'seven'
+      'four'
+      'eight';
+    }
+  }
   
