--- a/Css/header.css
+++ b/Css/header.css
@@ -116,23 +116,25 @@ transform: scale(1.05);
         align-items: center;
         display: inline;
         justify-content: center;
+        grid-gap:0px
         width: 100%;
         box-sizing: border-box;
-        background-color: rgb(55,121,95);
+        
     }
     .footer{
         width: 100%;
     
     }
     .grid-container-2{
-        font-size: 12px;
+        background-color:rgb(55,121,95) ;
+        font-size: 10px;
         display:flex;
         justify-content:flex-start;
         padding: 0px;
         margin: 0px;
         align-items: center;
         align-content: center;
-        grid-gap: 10px;
+        grid-gap: 5px;
     }
     .foto{
         
